k8s/nocodb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nocodb
  labels:
    app: nocodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nocodb
  serviceName: nocodb
  template:
    metadata:
      name: nocodb
      labels:
        app: nocodb
    spec:
      containers:
        - name: nocodb
          image: nocodb/nocodb:0.260.1@sha256:c111d28fb0dfa26e7779ffd8695a76bde3b2dbcd89c69a1f7b6181927c9e074a
          imagePullPolicy: IfNotPresent
          env: []
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/app/data
              name: data
          #resources:
          #  requests:
          #    cpu: 250m
          #    memory: 500Mi
          #  limits:
          #    memory: 1Gi
          #livenessProbe:
          #  httpGet:
          #    port: 7878
          #    path: /ping
          #  initialDelaySeconds: 30
          #  periodSeconds: 30
          #  timeoutSeconds: 5
          #  failureThreshold: 3
          #readinessProbe:
          #  httpGet:
          #    port: 7878
          #    path: /ping
          #  periodSeconds: 10
          #  timeoutSeconds: 5
          #  failureThreshold: 3
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 4Gi
