k8s/nocodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nocodb
spec:
  selector:
    app: nocodb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
