k8s/nocodb/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nocodb
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nocodb.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: nocodb
          port: 80
  tls:
    secretName: nocodb-cert-tls
    domains:
      - main: nocodb.anshulg.com
